# myextractor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 40163ae5f6c9_initial_schema.py  9f2d1a4c77e3_add_audit_logs_and_active_subscription_constraint.py  a8f7e1c2d334_add_api_keys_workflows_scoring_profiles.py  b7c3f4e1d2aa_enforce_valid_user_roles.py  c2f9d7e6b1aa_add_user_permissions_table.py  d1f4a22a9b41_allow_super_admin_role.py  d3e8f5a1b7c9_add_leads_dedup_unique_index.py  e3b1c4d9a2f0_add_lead_kind_for_b2c.py  e9a5c2d8f4b1_split_duplicate_and_similar_flags.py  f5a1e9b4c3d7_add_lead_consents_table.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api_keys.py  audit.py  auth.py  dashboard.py  extractions.py  health.py  leads.py  organizations.py  public.py  router.py  scoring.py  subscriptions.py  users.py  webhooks.py  workflows.py
backend/app/core/: auth_cookies.py  exceptions.py  permission_catalog.py  permissions.py  roles.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  automation_workflow.py  extraction.py  lead.py  lead_consent.py  organization.py  scoring_profile.py  subscription.py  user.py  user_permission.py
backend/app/schemas/: api_key.py  audit.py  auth.py  b2c.py  common.py  dashboard.py  extraction.py  lead.py  lead_consent.py  organization.py  permission.py  scoring.py  subscription.py  user.py  workflow.py
backend/app/services/: api_key_service.py  audit_log_service.py  auth_service.py  b2c_intake_service.py  cleaning_service.py  dashboard_service.py  export_service.py  extraction_service.py  lead_service.py  meta_lead_ads_service.py  permission_service.py  rate_limit_service.py  scoring_profile_service.py  scoring_service.py  subscription_service.py  workflow_service.py
backend/app/tasks/: celery_app.py  cleaning_tasks.py  extraction_tasks.py
backend/app/utils/: cache.py  email_validator.py  phone.py  text_cleaner.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_automation_scoring_v2.py  test_b2c_webhooks_and_compliance_api.py  test_user_permissions_api.py  test_users_api.py
backend/tests/unit/: test_b2c_and_extraction_schema.py  test_email_validator.py  test_extraction_service_keywords.py  test_meta_lead_ads_service.py  test_roles.py  test_scoring_service.py  test_security_tokens.py
config/: schedules.yaml  settings.yaml  source_catalog.yaml
docs/: API_AUTOMATION_SCORING_V2.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS_BACKLOG.md  B2C_SAFE_SOURCES_AND_CONSENT.md  B2C_SYSTEM_QUICKSTART.md  FULL_PROMPT_CHECKLIST.md  IMPLEMENTATION_PLAN.md  PRODUCT_STRATEGY_V1.md  PROD_SAAS_BASELINE.md
frontend/: .eslintrc.json  next.config.ts  package-lock.json  package.json  (+2 more)
workers/: pyproject.toml
workers/app/: celery_app.py  config.py
workers/app/browser/: anti_detect.py  manager.py
workers/app/parsers/: contact_parser.py
workers/app/scrapers/: base.py  google_maps.py  pages_jaunes.py  proxy_pool.py  resilience.py  sirene_api.py  website_contact.py
workers/app/tasks/: scrape_tasks.py
workers/tests/: test_phone_filtering.py  test_website_contact.py
(+195 files in other folders)
